Refs #2792 fix bugs: too much left padding for Charts with 2 items; dashed area appeared between white areas, on Charts page, on small resolutions

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -33,17 +33,17 @@ a:hover,
 
 h1 {
   font-size: 2em;
-  margin: 0.83em 0;
+  padding: 0.83em 0;
 }
 
 h2 {
   font-size: 1.5em;
-  margin: 0.67em 0;
+  padding: 0.67em 0;
 }
 
 h3 {
   font-size: 1.17em;
-  margin: 0.51em 0;
+  padding: 0.51em 0;
 }
 
 table, td, th, tr {
